--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -15,6 +15,7 @@
     justify-content: space-between;
     align-items: center;
     z-index: 999999999999999999999 !important; 
+    border: 2px solid black;
 }
 .footer_icons{
     font-size: 60px;
@@ -25,7 +26,8 @@
     color: black;
 }
 .footer_social_med a:hover{
-    scale: 2 !important;
+    scale: 1.3 !important;
+    transition-duration: 0.5s;
 }
 .web_pages ul{
     display: flex;
@@ -65,7 +67,6 @@
     align-items: center;
 }
 .footer_icons{
-    border: 2px solid black;
     font-size: 60px;
     padding: 15px;
     cursor: pointer;
