--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 999999999999999999999 !important; 
+    z-index: 99999 !important; 
 }
 .footer_icons{
     font-size: 60px;
